atualização nodejs-web

--- a/onebitcode/nodejs-web/04-exp-html-dinamico-ejs/src/views/index.ejs
+++ b/onebitcode/nodejs-web/04-exp-html-dinamico-ejs/src/views/index.ejs
@@ -1,3 +1,9 @@
+<!-- Utilizando recursos da linguagem JavaScript dentro do HTML
+É possível também usar outras estruturas do JS, desde que utilizemos a tag especial 
+do EJS <% %> a cada trecho de código não-HTML.
+Através disso podemos usar condicionais, repetições, e qualquer outro recurso da 
+linguagem normalmente. -->
+
 <!DOCTYPE html>
 <html lang="en">
 
