--- a/onebitcode/nodejs-web/08-exercicio-01/src/views/index.ejs
+++ b/onebitcode/nodejs-web/08-exercicio-01/src/views/index.ejs
@@ -7,7 +7,7 @@
     <title>Pagina Inicial</title>
 </head>
 <body>
-    <section>
+    <section class="index">
         <div>
             <h1>Bem-vindo ao B-Productive</h1>
             <span>Organize suas tarefas de forma eficiente e aumente sua produtividade!</span>
@@ -17,7 +17,7 @@
                 Crie listas personalizadas, adicione tarefas com facilidade,
                 acompanhe o progresso e nunca mais esqueça uma tarefa importante!
             </p>
-            <form action="" method="get">
+            <form action="/listTask" method="get">
                 <button type="submit">Comece a Gerenciar suas Tarefas</button>
             </form>
         </div>
