--- a/onebitcode/nodejs-web/08-exercicio-01/src/views/listTask.ejs
+++ b/onebitcode/nodejs-web/08-exercicio-01/src/views/listTask.ejs
@@ -6,6 +6,13 @@
     <title>Lista de Tarefas</title>
 </head>
 <body>
-    
+    <header>
+        <label for="addTarefa">Adicionar nova tarefa:</label>
+        <input type="text" name="addTarefa">
+        <button type="submit">Adicionar</button>
+    </header>
+    <section>
+        
+    </section>
 </body>
 </html>
